app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fanout
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: myweb3
      port:
        number: 8080
  rules:
  - host: local.domain
    http:
      paths:
      - path: /1
        pathType: Prefix
        backend:
          service:
            name: myweb1
            port:
              number: 8080
      - path: /2
        pathType: Prefix
        backend:
          service:
            name: myweb2
            port:
              number: 8080
      - path: /2
        pathType: Prefix
        backend:
          service:
            name: myweb2
            port:
              number: 8080
